--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
+logging.level.org.springframework.security=DEBUG
 
 #Oauth2 configure
-#spring.security.oauth2.client.registration.google.client-id= 
-#spring.security.oauth2.client.registration.google.client-secret= 
+spring.security.oauth2.client.registration.google.client-id=531579663323-r4n8v6u6il3eim3807kgp0nnh4p4jc5h.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 
 #paytm
 # paytm.payment.sandbox.merchantId:
